Updated CSV save